--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
         "@types/node": "^12.0.0",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/react-router-dom": "^5.3.0",
         "axios": "^0.21.4",
         "bulma": "^0.9.3",
+        "classnames": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.5",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
