--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "saga-toolkit": "^2.0.4",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
