--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "skipLibCheck": true,
         "strict": true,
         "target": "es5",
+        "typeRoots": ["src/@types", "node_modules/@types"]
     },
     "include": ["src"]
 }
