--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
         "@types/react-router-dom": "^5.3.0",
+        "@types/redux-logger": "^3.0.9",
         "axios": "^0.21.4",
         "bulma": "^0.9.3",
         "classnames": "^2.3.1",
@@ -20,6 +21,8 @@
         "react-redux": "^7.2.5",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^1.1.3",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
