--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-scripts": "4.0.3",
         "redux-logger": "^3.0.6",
         "redux-saga": "^1.1.3",
+        "styled-components": "^5.3.1",
         "typescript": "^4.1.2",
         "web-vitals": "^1.0.1"
     },
